Menu com logout e opção para navegar para configurações.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="project_id_caption">Código:</string>
     <string name="customer_name_caption">Cliente:</string>
     <string name="delivery_or_start_date_caption">Previsão de entrega:</string>
+    <string name="action_logout">Sair</string>
+    <string name="action_settings">Configurações</string>
 </resources>
