--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="action_logout">Sair</string>
     <string name="action_settings">Configurações</string>
     <string name="title_activity_stage">Etapas</string>
+    <string name="title_activity_checkin">Check-ins</string>
 </resources>
