--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="title_activity_stage">Etapas</string>
     <string name="title_activity_checkin">Check-ins</string>
     <string name="action_check_all">Marcar todos</string>
+    <string name="works_in_running">%1$d obras em execução</string>
 </resources>
