--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="title_activity_stage">Etapas</string>
     <string name="title_activity_checkin">Check-ins</string>
     <string name="action_check_all">Marcar todos</string>
-    <string name="works_in_running">%1$d obras em execução</string>
+    <string name="works_in_running">%1$d obra(s) em execução</string>
+    <string name="steps_in_running">%1$d etapa(s) da obra em execução</string>
 </resources>
