Refatoração dos identificadores das configurações.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,13 @@
         Endereço do Web service que o aplicativo comunicará para envio e recebimento de dados.
     </string>
 
-    <string name="auth_key_pref_title">Chave de autenticação</string>
-    <string name="auth_key_pref_default_value">626c6f63736b696e</string>
-    <string name="auth_key_pref_dialog_title">Confirme a chave de autenticação</string>
-    <string name="auth_key_dialog_message">
+    <string name="server_auth_key_pref_title">Chave de autenticação</string>
+    <string name="server_auth_key_pref_default_value">626c6f63736b696e</string>
+    <string name="server_auth_key_pref_dialog_title">Confirme a chave de autenticação</string>
+    <string name="server_auth_key_dialog_message">
         Informe o texto da chave de autenticação para conceder acesso ao Web service
     </string>
-    <string name="auth_key_pref_desc">
+    <string name="server_auth_key_pref_desc">
         Chave autenticável para obter acesso aos dados disponibilizados pelo Web service.
     </string>
     <string name="project_id_caption">Código</string>
