--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CRS</string>
-    <string name="title_login_activity">Login</string>
+    <string name="title_login_activity">Entrar</string>
     <string name="title_activity_main">Obras</string>
     <string name="title_activity_settings">Configurações</string>
 
