Atualizando o subtítulo com quantidade de obras em execução.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="msg_dialog_invalid_credentials">Seu CPF ou senha estão incorretos</string>
     <string name="title_dialog_error_loading_data_from_server">Falha ao tentar obter dados do servidor</string>
     <string name="title_dialog_error_loading_data_from_local">Falha ao tentar listar dados do banco de dados</string>
+    <string name="title_dialog_error_saving_data">Falha ao tentar salvar dados no banco de dados</string>
 </resources>
