--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="title_dialog_error_loading_data_from_server">Falha ao tentar obter dados do servidor</string>
     <string name="title_dialog_error_loading_data_from_local">Falha ao tentar listar dados do banco de dados</string>
     <string name="title_dialog_error_saving_data">Falha ao tentar salvar dados no banco de dados</string>
+    <string name="msg_user_not_logged">Você não está logado. Entre para poder marcar como feito!</string>
 </resources>
