Issue #29 - Todas alterações nos check-ins pendentes são enviadas para o servidor antes de obter as atualizações do servidor.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,7 @@
     <string name="error_updating_data">Falha ao atualizar dados do servidor</string>
     <string name="error_sending_data">Falha ao enviar dados para servidor</string>
     <string name="checkins_all_finished">Todos check-ins concluídos</string>
+    <string name="title_dialog_error_retrieving_data">Falha ao tentar recuperar dados no banco de dados</string>
+    <string name="title_looking_for_pending_changes">Procurando por alterações pendentes</string>
+    <string name="title_sending_pending_changes">Enviando alterações pendentes</string>
 </resources>
