--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,11 +61,16 @@
     <string name="title_dialog_error_loading_data_from_local">Falha ao tentar listar dados do banco de dados</string>
     <string name="title_dialog_error_saving_data">Falha ao tentar salvar dados no banco de dados</string>
     <string name="msg_user_not_logged">Você não está logado. Entre para poder marcar como feito!</string>
-    <string name="title_importing_data">Importando todas informações das obras</string>
+    <string name="tagline_importing_data">Importando todas informações das obras</string>
     <string name="content_please_wait">Por favor aguarde…</string>
     <string name="error_importing_data">Falha ao importar dados do servidor</string>
     <string name="error_updating_data">Falha ao atualizar dados do servidor</string>
     <string name="error_sending_data">Falha ao enviar dados para servidor</string>
     <string name="checkins_all_finished">Todos check-ins concluídos</string>
     <string name="title_dialog_error_retrieving_data">Falha ao tentar recuperar dados no banco de dados</string>
+    <string name="title_no_data">Nenhuma obra</string>
+    <string name="tagline_no_data">Não há dados disponíveis ou nenhuma obra está em execução</string>
+    <string name="title_no_connection">Sem conexão</string>
+    <string name="tagline_no_connection">Não há conexão com a internet e os dados não foram importados</string>
+    <string name="title_importing_data">Importação em andamento…</string>
 </resources>
