Check-ins podem ser filtrados pela localização, medida (100x100) ou dimensão (altura ou largura).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     </string>
     <string name="checkins_already_done">Todos check-ins já estão marcados!</string>
     <string name="checkins_status_cannot_change">Não é permitido desfazer o check-in!</string>
-    <string name="checkin_search_query_hint">Por local ou dimensão</string>
+    <string name="checkin_search_query_hint">Ex.: Sala ou 1380x550</string>
     <string name="checkin_measures_caption">Medidas</string>
     <string name="product_type_caption">Tipo</string>
     <string name="checkin_location_caption">Localização</string>
